fix: scrollbar of body is now off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ nav section.listParticipants {
     top: 100%;
     padding: 30px 20px 20px 20px;
     
-    height: 530px;
+    height: 500px;
     overflow-y: scroll;
 }
 
